# dho-analysis

./: .gitignore  pyproject.toml
kotlin/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
kotlin/.github/: pull_request_template.md
kotlin/models/: README.md
kotlin/notebooks/: DataFrame.ipynb  HelloWorld.ipynb  ZeroShot.ipynb
python/: .gitignore
python/src/: plot_slowness.py  print_num_practice_logs_per_author.py  print_slowness_for_labels.py
python/src/data/: load_time_aggregated_practice_logs.py
python/src/functions/: calc_message_embeddings.py  calc_pca.py  calc_sentences.py  utils.py
python/src/models/: ClassificationTransformer.py  CustomPCA.py  (+4 more)
python/tests/: test_calc_slowness_value.py
src/: config.py  plot_slowness.py  plot_slowness_for_different_time_scales.py  plot_slowness_for_dims.py  print_slowness_for_dims.py  print_slowness_for_labels.py
src/data/: load_practice_logs_for_author.py  load_time_aggregated_practice_logs.py
src/dho_analysis/: calc_message_embeddings.py  calc_pca.py  calc_sentences.py  calc_slow_features.py  calc_slowness_value.py  load_num_practice_logs_per_author.py  load_practice_logs_for_author.py  load_time_aggregated_practice_logs.py  plot_slowness.py  plot_slowness_for_different_time_scales.py  practice_logs_by_author.py  print_num_practice_logs_per_author.py  time_aggregates.py  utils.py
src/functions/: calc_message_embeddings.py  calc_sentences.py  calc_slow_features.py  calc_slowness_value.py  utils.py
src/models/: ClassificationTransformer.py  SentenceTransformerModel.py  TransformerModelUtils.py  ZeroShotEmbeddingTransformer.py
tests/: test_calc_slowness_value.py
(+21 files in other folders)
